--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.0"
+
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.example.samplecalc"
         minSdkVersion 28
